cpp/src/Parser/SysYFParser.cpp

// Generated from SysYF.g4 by ANTLR 4.13.2


#include "SysYFVisitor.h"

#include "SysYFParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SysYFParserStaticData final {
  SysYFParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SysYFParserStaticData(const SysYFParserStaticData&) = delete;
  SysYFParserStaticData(SysYFParserStaticData&&) = delete;
  SysYFParserStaticData& operator=(const SysYFParserStaticData&) = delete;
  SysYFParserStaticData& operator=(SysYFParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag sysyfParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<SysYFParserStaticData> sysyfParserStaticData = nullptr;

void sysyfParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (sysyfParserStaticData != nullptr) {
    return;
  }
#else
  assert(sysyfParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<SysYFParserStaticData>(
    std::vector<std::string>{
      "comp_unit", "global_def", "const_decl", "btype", "const_def", "const_init_val", 
      "var_decl", "var_def", "init_val", "func_def", "func_fparam", "block", 
      "block_item", "stmt", "assign_stmt", "empty_stmt", "exp_stmt", "if_stmt", 
      "while_stmt", "break_stmt", "continue_stmt", "return_stmt", "cond_exp", 
      "exp", "func_call", "lval", "ident", "number"
    },
    std::vector<std::string>{
      "", "'const'", "','", "';'", "'='", "'{'", "'}'", "'('", "')'", "'if'", 
      "'else'", "'while'", "'break'", "'continue'", "'return'", "'void'", 
      "'int'", "'float'", "'+'", "'-'", "'*'", "'/'", "'%'", "'||'", "'&&'", 
      "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'!'", "'['", "']'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "VOID_T", 
      "INT_T", "FLOAT_T", "PLUS", "MINUS", "MUL", "DIV", "MOD", "LOR", "LAND", 
      "EQ", "NEQ", "LT", "LTE", "GT", "GTE", "NOT", "LBRACKET", "RBRACKET", 
      "NAME", "INT", "FLOAT", "C_COMMENT", "CPP_COMMENT", "WS"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  sysyfParserStaticData = std::move(staticData);
}

}

SysYFParser::SysYFParser(TokenStream *input) : SysYFParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SysYFParser::SysYFParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SysYFParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *sysyfParserStaticData->atn, sysyfParserStaticData->decisionToDFA, sysyfParserStaticData->sharedContextCache, options);
}

SysYFParser::~SysYFParser() {
  delete _interpreter;
}

const atn::ATN& SysYFParser::getATN() const {
  return *sysyfParserStaticData->atn;
}

std::string SysYFParser::getGrammarFileName() const {
  return "SysYF.g4";
}

const std::vector<std::string>& SysYFParser::getRuleNames() const {
  return sysyfParserStaticData->ruleNames;
}

const dfa::Vocabulary& SysYFParser::getVocabulary() const {
  return sysyfParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SysYFParser::getSerializedATN() const {
  return sysyfParserStaticData->serializedATN;
}


//----------------- Comp_unitContext ------------------------------------------------------------------

SysYFParser::Comp_unitContext::Comp_unitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SysYFParser::Comp_unitContext::EOF() {
  return getToken(SysYFParser::EOF, 0);
}

std::vector<SysYFParser::Global_defContext *> SysYFParser::Comp_unitContext::global_def() {
  return getRuleContexts<SysYFParser::Global_defContext>();
}

SysYFParser::Global_defContext* SysYFParser::Comp_unitContext::global_def(size_t i) {
  return getRuleContext<SysYFParser::Global_defContext>(i);
}


size_t SysYFParser::Comp_unitContext::getRuleIndex() const {
  return SysYFParser::RuleComp_unit;
}


std::any SysYFParser::Comp_unitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYFVisitor*>(visitor))
    return parserVisitor->visitComp_unit(this);
  else
    return visitor->visitChildren(this);
}

SysYFParser::Comp_unitContext* SysYFParser::comp_unit() {
  Comp_unitContext *_localctx = _tracker.createInstance<Comp_unitContext>(_ctx, getState());
  enterRule(_localctx, 0, SysYFParser::RuleComp_unit);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(56);
      global_def();
      setState(59); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 229378) != 0));
    setState(61);
    match(SysYFParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Global_defContext ------------------------------------------------------------------

SysYFParser::Global_defContext::Global_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYFParser::Const_declContext* SysYFParser::Global_defContext::const_decl() {
  return getRuleContext<SysYFParser::Const_declContext>(0);
}

SysYFParser::Var_declContext* SysYFParser::Global_defContext::var_decl() {
  return getRuleContext<SysYFParser::Var_declContext>(0);
}

SysYFParser::Func_defContext* SysYFParser::Global_defContext::func_def() {
  return getRuleContext<SysYFParser::Func_defContext>(0);
}


size_t SysYFParser::Global_defContext::getRuleIndex() const {
  return SysYFParser::RuleGlobal_def;
}


std::any SysYFParser::Global_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYFVisitor*>(visitor))
    return parserVisitor->visitGlobal_def(this);
  else
    return visitor->visitChildren(this);
}

SysYFParser::Global_defContext* SysYFParser::global_def() {
  Global_defContext *_localctx = _tracker.createInstance<Global_defContext>(_ctx, getState());
  enterRule(_localctx, 2, SysYFParser::RuleGlobal_def);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(66);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(63);
      const_decl();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(64);
      var_decl();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(65);
      func_def();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Const_declContext ------------------------------------------------------------------

SysYFParser::Const_declContext::Const_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYFParser::BtypeContext* SysYFParser::Const_declContext::btype() {
  return getRuleContext<SysYFParser::BtypeContext>(0);
}

std::vector<SysYFParser::Const_defContext *> SysYFParser::Const_declContext::const_def() {
  return getRuleContexts<SysYFParser::Const_defContext>();
}

SysYFParser::Const_defContext* SysYFParser::Const_declContext::const_def(size_t i) {
  return getRuleContext<SysYFParser::Const_defContext>(i);
}


size_t SysYFParser::Const_declContext::getRuleIndex() const {
  return SysYFParser::RuleConst_decl;
}


std::any SysYFParser::Const_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYFVisitor*>(visitor))
    return parserVisitor->visitConst_decl(this);
  else
    return visitor->visitChildren(this);
}

SysYFParser::Const_declContext* SysYFParser::const_decl() {
  Const_declContext *_localctx = _tracker.createInstance<Const_declContext>(_ctx, getState());
  enterRule(_localctx, 4, SysYFParser::RuleConst_decl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(SysYFParser::T__0);
    setState(69);
    btype();
    setState(70);
    const_def();
    setState(75);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SysYFParser::T__1) {
      setState(71);
      match(SysYFParser::T__1);
      setState(72);
      const_def();
      setState(77);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(78);
    match(SysYFParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BtypeContext ------------------------------------------------------------------

SysYFParser::BtypeContext::BtypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SysYFParser::BtypeContext::INT_T() {
  return getToken(SysYFParser::INT_T, 0);
}

tree::TerminalNode* SysYFParser::BtypeContext::FLOAT_T() {
  return getToken(SysYFParser::FLOAT_T, 0);
}


size_t SysYFParser::BtypeContext::getRuleIndex() const {
  return SysYFParser::RuleBtype;
}


std::any SysYFParser::BtypeContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYFVisitor*>(visitor))
    return parserVisitor->visitBtype(this);
  else
    return visitor->visitChildren(this);
}

SysYFParser::BtypeContext* SysYFParser::btype() {
  BtypeContext *_localctx = _tracker.createInstance<BtypeContext>(_ctx, getState());
  enterRule(_localctx, 6, SysYFParser::RuleBtype);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    _la = _input->LA(1);
    if (!(_la == SysYFParser::INT_T

    || _la == SysYFParser::FLOAT_T)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Const_defContext ------------------------------------------------------------------

SysYFParser::Const_defContext::Const_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYFParser::IdentContext* SysYFParser::Const_defContext::ident() {
  return getRuleContext<SysYFParser::IdentContext>(0);
}

SysYFParser::Const_init_valContext* SysYFParser::Const_defContext::const_init_val() {
  return getRuleContext<SysYFParser::Const_init_valContext>(0);
}

tree::TerminalNode* SysYFParser::Const_defContext::LBRACKET() {
  return getToken(SysYFParser::LBRACKET, 0);
}

tree::TerminalNode* SysYFParser::Const_defContext::RBRACKET() {
  return getToken(SysYFParser::RBRACKET, 0);
}

tree::TerminalNode* SysYFParser::Const_defContext::INT() {
  return getToken(SysYFParser::INT, 0);
}


size_t SysYFParser::Const_defContext::getRuleIndex() const {
  return SysYFParser::RuleConst_def;
}


std::any SysYFParser::Const_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYFVisitor*>(visitor))
    return parserVisitor->visitConst_def(this);
  else
    return visitor->visitChildren(this);
}

SysYFParser::Const_defContext* SysYFParser::const_def() {
  Const_defContext *_localctx = _tracker.createInstance<Const_defContext>(_ctx, getState());
  enterRule(_localctx, 8, SysYFParser::RuleConst_def);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    ident();
    setState(88);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SysYFParser::LBRACKET) {
      setState(83);
      match(SysYFParser::LBRACKET);
      setState(85);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SysYFParser::INT) {
        setState(84);
        match(SysYFParser::INT);
      }
      setState(87);
      match(SysYFParser::RBRACKET);
    }
    setState(90);
    match(SysYFParser::T__3);
    setState(91);
    const_init_val();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Const_init_valContext ------------------------------------------------------------------

SysYFParser::Const_init_valContext::Const_init_valContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SysYFParser::ExpContext *> SysYFParser::Const_init_valContext::exp() {
  return getRuleContexts<SysYFParser::ExpContext>();
}

SysYFParser::ExpContext* SysYFParser::Const_init_valContext::exp(size_t i) {
  return getRuleContext<SysYFParser::ExpContext>(i);
}


size_t SysYFParser::Const_init_valContext::getRuleIndex() const {
  return SysYFParser::RuleConst_init_val;
}


std::any SysYFParser::Const_init_valContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYFVisitor*>(visitor))
    return parserVisitor->visitConst_init_val(this);
  else
    return visitor->visitChildren(this);
}

SysYFParser::Const_init_valContext* SysYFParser::const_init_val() {
  Const_init_valContext *_localctx = _tracker.createInstance<Const_init_valContext>(_ctx, getState());
  enterRule(_localctx, 10, SysYFParser::RuleConst_init_val);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(107);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(93);
      exp(0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(94);
      match(SysYFParser::T__4);
      setState(95);
      match(SysYFParser::T__5);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(96);
      match(SysYFParser::T__4);
      setState(97);
      exp(0);
      setState(102);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == SysYFParser::T__1) {
        setState(98);
        match(SysYFParser::T__1);
        setState(99);
        exp(0);
        setState(104);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(105);
      match(SysYFParser::T__5);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_declContext ------------------------------------------------------------------

SysYFParser::Var_declContext::Var_declContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYFParser::BtypeContext* SysYFParser::Var_declContext::btype() {
  return getRuleContext<SysYFParser::BtypeContext>(0);
}

std::vector<SysYFParser::Var_defContext *> SysYFParser::Var_declContext::var_def() {
  return getRuleContexts<SysYFParser::Var_defContext>();
}

SysYFParser::Var_defContext* SysYFParser::Var_declContext::var_def(size_t i) {
  return getRuleContext<SysYFParser::Var_defContext>(i);
}


size_t SysYFParser::Var_declContext::getRuleIndex() const {
  return SysYFParser::RuleVar_decl;
}


std::any SysYFParser::Var_declContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYFVisitor*>(visitor))
    return parserVisitor->visitVar_decl(this);
  else
    return visitor->visitChildren(this);
}

SysYFParser::Var_declContext* SysYFParser::var_decl() {
  Var_declContext *_localctx = _tracker.createInstance<Var_declContext>(_ctx, getState());
  enterRule(_localctx, 12, SysYFParser::RuleVar_decl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    btype();
    setState(110);
    var_def();
    setState(115);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == SysYFParser::T__1) {
      setState(111);
      match(SysYFParser::T__1);
      setState(112);
      var_def();
      setState(117);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(118);
    match(SysYFParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Var_defContext ------------------------------------------------------------------

SysYFParser::Var_defContext::Var_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYFParser::IdentContext* SysYFParser::Var_defContext::ident() {
  return getRuleContext<SysYFParser::IdentContext>(0);
}

tree::TerminalNode* SysYFParser::Var_defContext::LBRACKET() {
  return getToken(SysYFParser::LBRACKET, 0);
}

tree::TerminalNode* SysYFParser::Var_defContext::RBRACKET() {
  return getToken(SysYFParser::RBRACKET, 0);
}

SysYFParser::Init_valContext* SysYFParser::Var_defContext::init_val() {
  return getRuleContext<SysYFParser::Init_valContext>(0);
}

tree::TerminalNode* SysYFParser::Var_defContext::INT() {
  return getToken(SysYFParser::INT, 0);
}


size_t SysYFParser::Var_defContext::getRuleIndex() const {
  return SysYFParser::RuleVar_def;
}


std::any SysYFParser::Var_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYFVisitor*>(visitor))
    return parserVisitor->visitVar_def(this);
  else
    return visitor->visitChildren(this);
}

SysYFParser::Var_defContext* SysYFParser::var_def() {
  Var_defContext *_localctx = _tracker.createInstance<Var_defContext>(_ctx, getState());
  enterRule(_localctx, 14, SysYFParser::RuleVar_def);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(120);
    ident();
    setState(126);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SysYFParser::LBRACKET) {
      setState(121);
      match(SysYFParser::LBRACKET);
      setState(123);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == SysYFParser::INT) {
        setState(122);
        match(SysYFParser::INT);
      }
      setState(125);
      match(SysYFParser::RBRACKET);
    }
    setState(130);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SysYFParser::T__3) {
      setState(128);
      match(SysYFParser::T__3);
      setState(129);
      init_val();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Init_valContext ------------------------------------------------------------------

SysYFParser::Init_valContext::Init_valContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SysYFParser::ExpContext *> SysYFParser::Init_valContext::exp() {
  return getRuleContexts<SysYFParser::ExpContext>();
}

SysYFParser::ExpContext* SysYFParser::Init_valContext::exp(size_t i) {
  return getRuleContext<SysYFParser::ExpContext>(i);
}


size_t SysYFParser::Init_valContext::getRuleIndex() const {
  return SysYFParser::RuleInit_val;
}


std::any SysYFParser::Init_valContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYFVisitor*>(visitor))
    return parserVisitor->visitInit_val(this);
  else
    return visitor->visitChildren(this);
}

SysYFParser::Init_valContext* SysYFParser::init_val() {
  Init_valContext *_localctx = _tracker.createInstance<Init_valContext>(_ctx, getState());
  enterRule(_localctx, 16, SysYFParser::RuleInit_val);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(146);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 12, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(132);
      exp(0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(133);
      match(SysYFParser::T__4);
      setState(134);
      match(SysYFParser::T__5);
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(135);
      match(SysYFParser::T__4);
      setState(136);
      exp(0);
      setState(141);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == SysYFParser::T__1) {
        setState(137);
        match(SysYFParser::T__1);
        setState(138);
        exp(0);
        setState(143);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(144);
      match(SysYFParser::T__5);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_defContext ------------------------------------------------------------------

SysYFParser::Func_defContext::Func_defContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYFParser::BtypeContext* SysYFParser::Func_defContext::btype() {
  return getRuleContext<SysYFParser::BtypeContext>(0);
}

SysYFParser::IdentContext* SysYFParser::Func_defContext::ident() {
  return getRuleContext<SysYFParser::IdentContext>(0);
}

SysYFParser::BlockContext* SysYFParser::Func_defContext::block() {
  return getRuleContext<SysYFParser::BlockContext>(0);
}

std::vector<SysYFParser::Func_fparamContext *> SysYFParser::Func_defContext::func_fparam() {
  return getRuleContexts<SysYFParser::Func_fparamContext>();
}

SysYFParser::Func_fparamContext* SysYFParser::Func_defContext::func_fparam(size_t i) {
  return getRuleContext<SysYFParser::Func_fparamContext>(i);
}

tree::TerminalNode* SysYFParser::Func_defContext::VOID_T() {
  return getToken(SysYFParser::VOID_T, 0);
}


size_t SysYFParser::Func_defContext::getRuleIndex() const {
  return SysYFParser::RuleFunc_def;
}


std::any SysYFParser::Func_defContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYFVisitor*>(visitor))
    return parserVisitor->visitFunc_def(this);
  else
    return visitor->visitChildren(this);
}

SysYFParser::Func_defContext* SysYFParser::func_def() {
  Func_defContext *_localctx = _tracker.createInstance<Func_defContext>(_ctx, getState());
  enterRule(_localctx, 18, SysYFParser::RuleFunc_def);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(180);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SysYFParser::INT_T:
      case SysYFParser::FLOAT_T: {
        enterOuterAlt(_localctx, 1);
        setState(148);
        btype();
        setState(149);
        ident();
        setState(150);
        match(SysYFParser::T__6);
        setState(159);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == SysYFParser::INT_T

        || _la == SysYFParser::FLOAT_T) {
          setState(151);
          func_fparam();
          setState(156);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == SysYFParser::T__1) {
            setState(152);
            match(SysYFParser::T__1);
            setState(153);
            func_fparam();
            setState(158);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(161);
        match(SysYFParser::T__7);
        setState(162);
        block();
        break;
      }

      case SysYFParser::VOID_T: {
        enterOuterAlt(_localctx, 2);
        setState(164);
        match(SysYFParser::VOID_T);
        setState(165);
        ident();
        setState(166);
        match(SysYFParser::T__6);
        setState(175);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == SysYFParser::INT_T

        || _la == SysYFParser::FLOAT_T) {
          setState(167);
          func_fparam();
          setState(172);
          _errHandler->sync(this);
          _la = _input->LA(1);
          while (_la == SysYFParser::T__1) {
            setState(168);
            match(SysYFParser::T__1);
            setState(169);
            func_fparam();
            setState(174);
            _errHandler->sync(this);
            _la = _input->LA(1);
          }
        }
        setState(177);
        match(SysYFParser::T__7);
        setState(178);
        block();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Func_fparamContext ------------------------------------------------------------------

SysYFParser::Func_fparamContext::Func_fparamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SysYFParser::BtypeContext* SysYFParser::Func_fparamContext::btype() {
  return getRuleContext<SysYFParser::BtypeContext>(0);
}

SysYFParser::IdentContext* SysYFParser::Func_fparamContext::ident() {
  return getRuleContext<SysYFParser::IdentContext>(0);
}

tree::TerminalNode* SysYFParser::Func_fparamContext::LBRACKET() {
  return getToken(SysYFParser::LBRACKET, 0);
}

tree::TerminalNode* SysYFParser::Func_fparamContext::RBRACKET() {
  return getToken(SysYFParser::RBRACKET, 0);
}


size_t SysYFParser::Func_fparamContext::getRuleIndex() const {
  return SysYFParser::RuleFunc_fparam;
}


std::any SysYFParser::Func_fparamContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SysYFVisitor*>(visitor))
    return parserVisitor->visitFunc_fparam(this);
  else
    return visitor->visitChildren(this);
}

SysYFParser::Func_fparamContext* SysYFParser::func_fparam() {
  Func_fparamContext *_localctx = _tracker.createInstance<Func_fparamContext>(_ctx, getState());
  enterRule(_localctx, 20, SysYFParser::RuleFunc_fparam);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(182);
    btype();
    setState(183);
    ident();
    setState(186);
    _errHandler->sync(this);
